--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,7 +6,7 @@ linters-settings:
   gofmt:
     simplify: true
   goimports:
-    local-prefixes: github.com/mattermost/mattermost-starter-template
+    local-prefixes: github.com/logflames/mattermost-f.kth.se-plugin
   govet:
     check-shadowing: true
     enable-all: true
