--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,8 @@
 {
-  "private": true,
+  "name": "webapp",
+  "version": "1.0.0",
+  "description": "This plugin serves as a starting point for writing a Mattermost plugin.",
+  "main": "src/index.js",
   "scripts": {
     "build": "webpack --mode=production",
     "build:watch": "webpack --mode=production --watch",
@@ -12,6 +15,8 @@
     "test-ci": "jest --forceExit --detectOpenHandles --maxWorkers=2",
     "check-types": "tsc"
   },
+  "author": "",
+  "license": "",
   "devDependencies": {
     "@babel/cli": "7.16.8",
     "@babel/core": "7.16.12",
@@ -24,61 +29,39 @@
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.16.7",
     "@emotion/babel-preset-css-prop": "11.2.0",
-    "@emotion/core": "10.3.1",
-    "@mattermost/types": "6.7.0-0",
-    "@testing-library/jest-dom": "5.16.1",
-    "@types/babel__core": "7.1.18",
-    "@types/babel__template": "7.4.1",
-    "@types/enzyme": "3.10.11",
+    "@emotion/react": "11.11.0",
     "@types/jest": "27.4.0",
     "@types/node": "17.0.12",
-    "@types/react": "16.14.26",
-    "@types/react-dom": "17.0.11",
-    "@types/react-redux": "7.1.22",
-    "@types/react-router-dom": "5.1.5",
-    "@types/react-transition-group": "4.4.0",
     "@typescript-eslint/eslint-plugin": "5.10.1",
     "@typescript-eslint/parser": "5.10.1",
-    "@typescript-eslint/typescript-estree": "5.52.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
-    "babel-plugin-formatjs": "10.3.7",
     "babel-plugin-typescript-to-proptypes": "2.0.0",
-    "css-loader": "6.5.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "3.6.2",
     "eslint": "8.8.0",
-    "eslint-import-resolver-alias": "1.1.2",
     "eslint-import-resolver-typescript": "2.7.1",
     "eslint-import-resolver-webpack": "0.13.2",
-    "eslint-plugin-babel": "5.3.1",
-    "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jest": "26.5.3",
-    "eslint-plugin-mattermost": "github:mattermost/eslint-plugin-mattermost",
-    "eslint-plugin-no-only-tests": "2.6.0",
     "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "file-loader": "6.2.0",
-    "identity-obj-proxy": "3.0.0",
-    "isomorphic-fetch": "3.0.0",
     "jest": "27.4.7",
     "jest-canvas-mock": "2.3.1",
     "jest-junit": "13.0.0",
-    "sass": "1.52.3",
-    "sass-loader": "13.0.0",
-    "style-loader": "3.3.1",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1"
   },
   "dependencies": {
-    "core-js": "3.22.8",
-    "mattermost-redux": "5.33.1",
-    "react": "^16.14.0",
+    "core-js": "3.1.4",
+    "lodash": "^4.17.19",
+    "mattermost-redux": "5.33.0",
+    "react": "16.14.0",
+    "react-bootstrap": "2.4.0",
+    "react-dom": "16.14.0",
     "react-redux": "8.0.2",
+    "react-select": "^3.0.8",
     "redux": "4.2.0",
+    "superagent": "4.1.0",
     "typescript": "4.6.4"
   },
   "jest": {
@@ -119,7 +102,7 @@
       "jest-canvas-mock"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>/tests/setup.tsx"
+      "<rootDir>/src/tests/setup.js"
     ],
     "testURL": "http://localhost:8065"
   }
