--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,19 +21,9 @@ jobs:
         with:
           go-version: "1.22"
 
-      - name: Install NVM
-        run: |
-          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
-          echo "export NVM_DIR=\"$HOME/.nvm\"" >> $GITHUB_ENV
-          echo "[ -s \"$HOME/.nvm/nvm.sh\" ] && \\. \"$HOME/.nvm/nvm.sh\"" >> $GITHUB_ENV
-          echo "[ -s \"$HOME/.nvm/bash_completion\" ] && \\. \"$HOME/.nvm/bash_completion\"" >> $GITHUB_ENV
-        shell: bash
-
-      - name: Load NVM and install Node.js
-        run: |
-          source $HOME/.nvm/nvm.sh
-          nvm install
-        shell: bash
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '16.13.1'
 
       - name: Run make
         run: make
