--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,6 @@ jobs:
         with:
           node-version: '16.13.1'
 
-      - name: Run make
-        run: make
+      - name: Run make dist
+        run: make dist
 
